# InfinityCC

./: README.md  pyproject.toml  train.py
cache/: leech_lattices_type4_normalized.npy
infinity/models/: basic.py  factorized_cross_entropy_loss.py  infinity.py
infinity/models/bsq_vae/: flux_vqgan.py  multiscale_bsq.py  multiscale_leechq.py  vae.py
infinity/utils/: amp_opt.py  arg_util.py  dynamic_resolution.py  load.py  lr_control.py
scripts/: eval_layer12_l24_xl_256_ce.sh  eval_layer24_l24_xl_vf_256_ce.sh
tools/: class_conditioned_infer.py  fid_score.py  run_infinity.py
